--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,14 @@ img {
   color: #399bd1;
 }
 
+.btn-primary {
+  background-color: #399bd1;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+  width: 11.4rem;
+  padding: 1.3rem 0;
+  margin-top: 2.8rem
+
+}
 
 /*navbar*/
 
@@ -85,7 +93,7 @@ img {
 
 .image-container img {
   opacity: 0.7;
-
+}
 
 /* Featured Project
 
@@ -102,4 +110,35 @@ img {
 .categories ul {
   color: rgba(0, 0, 0, 0.7);
   line-height: 1.4;
+}
+
+
+/*projects section*/
+
+.project {
+  margin-bottom: 5.85rem;
+}
+
+.project .image-container {
+  height: 13.5rem;
+  overflow: hidden;
+}
+
+/*help*/
+.help {
+  padding: 5.2rem 0;
+  background-color: #f3f3f3;
+  text-align: center;
+}
+
+.help strong {
+  display: inline-block;
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 1.4rem;
+}
+
+.help p {
+  max-width: 42rem;
+  margin: auto;
 }
