--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,13 +14,16 @@ body {
   line-height: 1.4;
 }
 
-
 h2 {
   font-size: 1.7rem;
   font-weight: bold;
   color: #399bd1;
 }
 
+h3 {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
 
 img {
   width: 100%;
@@ -40,15 +43,27 @@ img {
   width: 11.4rem;
   padding: 1.3rem 0;
   margin-top: 2.8rem
+}
 
+btn-primary:hover {
+  background-color: #399bd1;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.9);
+}
+
+.btn-primary:active {
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0.5);
+}
+
+/*slick override*/
+.slick-slide {
+  outline: none;
 }
 
 /*navbar*/
-
-
-
-
-
+.navbar {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
 
 /*jumbotron*/
 
@@ -65,19 +80,28 @@ img {
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;
+}
+
+.background-bike {
   background-image: url("../images/jumbotron-bike.jpg");
 }
 
+.background-beer {
+  background-image: url("../images/jumbotron-beer.jpg");
+}
+
+.background-flowers {
+  background-image: url("../images/jumbotron-flowers.jpg");
+}
+
+.background-duffel {
+  background-image: url("../images/jumbotron-duffel.jpg");
+}
 
 .jumbotron h1 {
   font-family: "Monoton", sans-serif;
   font-size: 7.1rem;
-  color: white;
-  text-shadow:
-  -1px -1px 0 #000,
-  1px -1px 0 #000,
-  -1px 1px 0 #000,
-  1px 1px 0 #000;
+
 }
 
 .jumbotron p {
@@ -85,22 +109,60 @@ img {
   margin: auto;
 }
 
+.relative-wrapper {
+  position: relative;
+  top: -16rem;
+  width: 100%;
+  text-align: center;
+}
+
+@media only screen and (max-width: 767px) {
+  .jumbotron h1 {
+    font-size: 5.7rem;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+
+  .jumbotron p{
+    width: 100%;
+    text-align: center;
+
+  }
+
+  .jumbotron h1 {
+    font-size: 4rem;
+  }
+}
 /* Project Image Containers */
 
 .image-container {
   overflow: hidden;
+
 }
 
 .image-container img {
   opacity: 0.7;
+  transition: transform .5s, opacity .5s;
+  transition: transform .5s, opacity .5s;
 }
 
-/* Featured Project
+.image-container img:hover {
+  opacity: 1;
+  transform: scale(1.3);
+}
+
+/* Featured Project*/
+
 
 .featured-project {
   margin-top: -7rem; /* To account for relatively positioned button */
+  }
 
-
+.featured-project .image-container {
+  height: 19rem;
+  margin-top: 20px;
+  }
 
 .categories h3 {
   color: #399bd1;
